--- a/vue-project/src/assets/style.css
+++ b/vue-project/src/assets/style.css
@@ -7,7 +7,7 @@ body{
 /* header et menu */
 
 header{
-    background-image: url(./vue-project/img/banniere.jpg);
+    background-image: url(../../img/banniere.jpg);
     background-size: cover;
     height: 500px;
 }
@@ -71,6 +71,7 @@ h2{
 
 #creation img{
     height: 400px;
+    cursor: pointer;
 }
 
 #creation img:hover{
@@ -81,9 +82,12 @@ h2{
 .creation-content{
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 10px;
 }
 
 /* formulaire */
+
+
 
 #message{
     width: 400px;
@@ -95,9 +99,9 @@ h2{
 } 
 
 #form-content{
-    margin-left: 20px;
     width: 400px; 
     font-size: 1.5rem;
+    margin-bottom: 20px;
 }
 
  #boutton{
@@ -114,6 +118,99 @@ h2{
     display: flex;  
     flex-direction: column;
     align-items: center;
+    background-color: rgb(20, 102, 156);
 }
 
+#error-message{
+    display: none;
+    background-color: red;
+    font-size: 1.3rem;
+}
 
+/* Footer */
+
+#face{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+#twitter{
+    position: fixed;
+    width: 85px;
+    height: 85px;
+    right: 70px;
+    bottom: 3px;
+}
+
+#github{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 20px;
+    right: 150px;
+}
+
+#text-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(20, 102, 156);
+    opacity: 40%;
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: -10px;
+}
+
+/* Modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+  }
+  
+
+  .modal-content {
+    margin-left: 33%;
+    width: 33%;
+  }
+  
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    text-align: center;
+    color: white;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
